--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,6 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-lib_deps =  89
+lib_deps =  knolleary/PubSubClient @ ^2.8
+            dancol90/ESP8266Ping @ ^1.0
 upload_speed = 921600
